# flatpak-utils

./: Makefile.am  configure.ac
src/: Makefile.am  application.c  config.c  filesystem.c  flatpak-session.c  flatpak-session.h  flatpak-session@.service  flatpak-update.service  flatpak.c  generator.h  log.c  mainloop.c  remote.c  service.c  session.c  start-session.sh
